k8s/components/cloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud
  labels:
    app.kubernetes.io/managed-by: argocd
    homelab/cluster: homelab
    homelab/env: prod
    homelab/stack: apps
